Fix OpenAPI spec request and response bodies
